--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "Tyler McGinnis <tylermcginnis33@gmail.com> (http://tylermcginnis.com)",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.8.0",
+    "axios": "^0.8.1",
     "firebase": "^2.3.2",
     "history": "^1.13.1",
-    "re-base": "^1.3.1",
+    "lodash": "^4.5.0",
+    "re-base": "^1.5.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.1",
@@ -23,6 +24,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "webpack": "^1.12.9"
   }
 }
