--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
+    "shipit-deploy": "^2.0.0",
+    "shipit-npm": "^0.2.0",
+    "shipit-shared": "^4.1.6",
     "webpack": "^1.12.9"
   }
 }
